--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'androidx.databinding:databinding-runtime:7.1.2'
     implementation 'androidx.test:core-ktx:1.4.0'
     implementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+    implementation 'androidx.core:core-ktx:+'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
